--- a/index.html
+++ b/index.html
@@ -1,196 +1,130 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>S2</title>
+    <head>
+        <script src="jquery-3.4.1.min.js"></script>
+        <script src="popper.min.js"></script>
+        <script src="bootstrap.min.js"></script>
+        <script src="jqcruda.js"></script>
+        <link rel="stylesheet" href="bootstrap.min.css" />
+        <link rel="stylesheet" href="jqstyles.css" />
+    </head>
+    <body class="container">
+        <h1>Albums</h1>
 
-    <link rel="stylesheet" href="libs/bootsrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="main.css"/>
-    <script src="libs/bootsrap/js/bootstrap.bundle.min.js"></script>
-    <script src="main.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
-          <h3>List of Persons</h3>
-          <table class="table table-light table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Age</th>
-                <th scope="col">City</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody id="Persons">
-              <tr>
-                <th scope="row">Abdu</th>
-                <td>Unknown</td>
-                <td>15</td>
-                <td>LHR</td>
-                <td>
-                  <a href="#" onclick="Update(event)">Update</a> /
-                  <a href="#" onclick="Delete(event)">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Ali</th>
-                <td>Male</td>
-                <td>15</td>
-                <td>Wapda</td>
-                <td>
-                  <a href="#" onclick="Update(event)">Update</a> /
-                  <a href="#" onclick="Delete(event)">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Abdullah</th>
-                <td>Male</td>
-                <td>25</td>
-                <td>Johar</td>
-                <td>
-                  <a href="#" onclick="Update(event)">Update</a> /
-                  <a href="#" onclick="Delete(event)">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Shah</th>
-                <td>Male</td>
-                <td>15</td>
-                <td>Multan</td>
-                <td>
-                  <a href="#" onclick="Update(event)">Update</a> /
-                  <a href="#" onclick="Delete(event)">Delete</a>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Waqar</th>
-                <td>Male</td>
-                <td>18</td>
-                <td>Muzaffargarh</td>
-                <td>
-                  <a href="#" onclick="Update(event)">Update</a> /
-                  <a href="#" onclick="Delete(event)">Delete</a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <button
+            type="button"
+            class="btn btn-primary btn-lg"
+            data-toggle="modal"
+            data-target="#addModal"
+        >
+            Add Album
+        </button>
+
+        <div
+            class="modal fade"
+            id="addModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="modelTitleId"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Add New Album</h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="title">Title</label>
+                            <input
+                                type="text"
+                                class="form-control"
+                                name="title"
+                                id="title"
+                                aria-describedby="titleHelp"
+                                placeholder="Title of the Album"
+                            />
+                            <small id="titleHelp" class="form-text text-muted"
+                                >Enter Title of the Album</small
+                            >
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="addBtn" class="btn btn-info">
+                            Add Album
+                        </button>
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-dismiss="modal"
+                        >
+                            Close
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-4">
-          <h3>Add / Update Person Forms</h3>
-          <table>
-            <tbody>
-              <tr>
-                <td><label for="name">Name:</label></td>
-                <td colspan="2">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="Name"
-                    maxlength="10"
-                    title="Please use alphabets only. &#013;Maximum length: 10&#013;Minimum Length: 1"
-                    required
-                  />
-                </td>
-              </tr>
-              <tr>
-                <fieldset id="Gender">
-                  <td><label>Gender:</label></td>
-                  <td>
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      value="Male"
-                      name="Gender"
-                      id="Male"
-                      checked
-                    />
-                    <label class="form-check-label" for="Male">Male</label>
-                  </td>
-                  <td>
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      value="Female"
-                      name="Gender"
-                      id="Female"
-                    />
-                    <label class="form-check-label" for="Female">Female</label>
-                  </td>
-                </fieldset>
-              </tr>
-              <tr>
-                <td><label for="name">Age:</label></td>
-                <td colspan="2">
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="Age"
-                    min="10"
-                    max="50"
-                    required
-                  />
-                </td>
-              </tr>
-              <tr>
-                <td><label for="name">City:</label></td>
-                <td colspan="2">
-                  <select
-                    class="form-select"
-                    aria-label="Default select example"
-                    id="City"
-                  >
-                    <option selected>Lahore</option>
-                    <option>Islamabad</option>
-                    <option>Karachi</option>
-                    <option>Faislabad</option>
-                    <option>Mianwali</option>
-                    <option>Sargodha</option>
-                    <option>Bhalwal</option>
-                  </select>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <button
-                    type="button"
-                    class="btn btn-outline-dark"
-                    style="width: 100%"
-                    id="Reset"
-                  >
-                    Reset
-                  </button>
-                </td>
-                <td>
-                  <button
-                    type="button"
-                    class="btn btn-outline-primary"
-                    style="width: 100%"
-                    id="Add"
-                  >
-                    Add
-                  </button>
-                </td>
-                <td>
-                  <button
-                    type="button"
-                    class="btn btn-outline-primary"
-                    style="width: 100%"
-                    id="Update"
-                  >
-                    Update
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+
+        <div id="albums">Loading ...</div>
+
+        <div
+            class="modal fade"
+            id="updateModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="modelTitleId"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Update Record</h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" id="updateId" /> <br />
+                        <div class="form-group">
+                            <label for="updateTitle">Title</label>
+                            <input
+                                type="text"
+                                class="form-control"
+                                name="updateTitle"
+                                id="updateTitle"
+                                aria-describedby="updateHelpId"
+                                placeholder=""
+                            />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="updateSave" class="btn btn-primary">
+                            Update
+                        </button>
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-dismiss="modal"
+                        >
+                            Close
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
