--- a/users.html
+++ b/users.html
@@ -22,7 +22,6 @@
             Add User
         </button>
 
-        <!-- Modal -->
         <div
             class="modal fade"
             id="addModal"
@@ -90,7 +89,7 @@
             </div>
         </div>
 
-        <div id="users">Loading ...</div>
+        <div id="users">Please wait</div>
 
         <div
             class="modal fade"
